# SX12XX_Project

lora_src/: CMakeCache.txt  CMakeLists.txt  PiHal_LG.h  PiHal_WP.h  cmake_install.cmake  generate_text.py  ref_rx.cpp  ref_rx_otherwiring.cpp  ref_tx.cpp  ref_tx_otherwiring.cpp  test_tx.txt
src/: BasicRx  BasicTx  CMakeLists.txt  config.txt  main.cpp
